<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_background">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.DataSync.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_md"
        app:startIconDrawable="@drawable/ic_search"
        android:hint="@string/search_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_md"
        android:paddingBottom="@dimen/spacing_sm"
        app:singleSelection="true"
        app:selectionRequired="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipIncoming"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_incoming" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOutgoing"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_outgoing" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMissed"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_missed" />
    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/spacing_md" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <include
            android:id="@+id/emptyState"
            layout="@layout/view_empty_state"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>
